<resources>
    <string name="app_name" translatable="false">DCC++Throttle</string>
    <string name="app_subtitle" translatable="false">aleksandr.ru</string>
    <string name="app_version" translatable="false">%s (%d)</string>
    <string name="app_website" translatable="false">https://aleksandr.ru/my/dccppthrottle</string>
    <string name="title_activity_cab">#%d %s</string>
    <string name="title_activity_dual_cab">Dual locomotive cab</string>
    <string name="title_activity_functions">Functions editor</string>
    <string name="title_activity_route">Edit route</string>
    <string name="title_activity_prog">Prog. track</string>
    <string name="title_activity_decoder">Decoder helper</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_console">Console</string>
    <string name="title_fragment_locomotives">Locomotives</string>
    <string name="title_fragment_accessories">Accessories</string>
    <string name="title_fragment_routes">Routes</string>
    <string name="title_fragment_lp5_mapping">LokPilot 5 function mapping</string>
    <string name="title_fragment_lp5_outputs">LokPilot 5 outputs config</string>
    <string name="title_fragment_lp5_settings">LokPilot 5 settings</string>
    <string name="title_fragment_sw2_mapping">SmartWagon2 function mapping</string>
    <string name="title_fragment_sw2_outputs">SmartWagon2 outputs config</string>
    <string name="title_fragment_sw2_settings">SmartWagon2 settings</string>
    <string name="title_fragment_xp4_mapping_simple">XP 4.1 / IntelliDrive 2 simple function mapping</string>
    <string name="title_fragment_xp4_mapping">XP 4.1 / IntelliDrive 2 extended function mapping</string>
    <string name="title_fragment_xp4_outputs">XP 4.1 / IntelliDrive 2 outputs config</string>
    <string name="title_fragment_xp4_settings">XP 4.1 / IntelliDrive 2 settings</string>
    <string name="title_fragment_xp5_mapping_simple">SmartDecoder XP 5.1 simple function mapping</string>
    <string name="title_fragment_xp5_outputs">SmartDecoder XP 5.1 outputs config</string>
    <string name="title_fragment_xp5_settings">SmartDecoder XP 5.1 settings</string>
    <string name="title_dialog_locomotive_add">Add locomotive</string>
    <string name="title_dialog_locomotive_edit">Edit locomotive</string>
    <string name="title_dialog_accessory_add">Add accessory</string>
    <string name="title_dialog_accessory_edit">Edit accessory</string>
    <string name="title_dialog_route_add">Add route</string>
    <string name="title_dialog_pom_value">Set CV value (main track)</string>
    <string name="title_dialog_pom_bit">Set CV bit (main track)</string>
    <string name="title_dialog_read_method">Read method</string>
    <string name="title_dialog_reading_x_cvs">Reading %d CVs</string>
    <string name="title_dialog_reading_cvs">Reading CVs</string>
    <string name="title_dialog_writing_cvs">Writing CVs</string>
    <string name="title_dialog_lp5_row_x">Mapping row %d</string>
    <string name="title_dialog_xp4_row_x">Mapping line %d</string>
    <string name="title_alert_permission_required">Permission required</string>
    <string name="title_pref_general">General</string>
    <string name="title_pref_cab">Cab(s)</string>
    <string name="title_pref_lists">Lists</string>
    <string name="title_pref_cs">Command station</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_stop">Stop</string>
    <string name="action_add_loco">Add locomotive</string>
    <string name="action_edit_loco">Edit locomotive</string>
    <string name="action_func_editor">Functions editor</string>
    <string name="action_add_acc">Add accessory</string>
    <string name="action_sel_acc">Select accessory</string>
    <string name="action_add_route">Add route</string>
    <string name="action_context_edit">Edit</string>
    <string name="action_context_delete">Delete</string>
    <string name="action_pom_value">Program CV value</string>
    <string name="action_pom_bit">Program CV bit</string>
    <string name="action_connect">Connect</string>
    <string name="action_read_value">Read value</string>
    <string name="action_write_value">Write value</string>
    <string name="menu_power">Track power</string>
    <string name="menu_join">Join MAIN to PROG</string>
    <string name="menu_locomotives">Locomotives</string>
    <string name="menu_dual_cab">Dual cab</string>
    <string name="menu_accessories">Accessories</string>
    <string name="menu_routes">Routes</string>
    <string name="menu_programming">Programming</string>
    <string name="menu_console">Console</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="label_connect_at_start">Connect at startup</string>
    <string name="label_keep_screen">Keep screen on</string>
    <string name="label_keep_screen_on">Prevent screen from blanking when inactive</string>
    <string name="label_keep_screen_off">Screen will blank as normal</string>
    <string name="label_sort_locos">Sort locomotives</string>
    <string name="label_sort_acc">Sort accessories</string>
    <string name="label_sort_routes">Sort routes</string>
    <string name="label_speed_steps">Speed steps mode</string>
    <string name="label_resulting_cv_x">Resulting CV value = %d</string>
    <string name="label_xp4_firebox">Firebox flicker</string>
    <string name="label_xp4_firebox_desc">Light outputs A1 to A7 can be assigned random flickering. This effect is typically used for the flickering inside a firebox.</string>
    <string name="label_xp4_cv182">Settings for the flicker rhythm, as well as for the intensity of brightness are entered in CV 182.</string>
    <string name="label_xp4_cv182lo">Bits 0 – 3 change the flicker rhythm</string>
    <string name="label_xp4_cv182hi">Bits 4 – 6 change the brightness</string>
    <string name="label_xp4_cv182note">Since only one value can be programmed into a CV, the flicker effect results from the sum of the individual values of the flicker rhythm plus the sum of the individual values of the brightness settings (sum of bits 0 – 3 plus sum of bits 4 – 6). The combination of all bits results in a differing, random flicker effect.</string>
    <string name="label_xp4_simple_mapping">Simple function mapping</string>
    <string name="label_xp4_simple_desc">In simple function mapping, you can freely assign switchable functions such as lighting, special function outputs, switching (shunting) mode, and switchable acceleration and deceleration rates to function keys F0 to F12 of your DCC system.</string>
    <string name="label_xp4_simple_enable">Enable simple function mapping (CV96 = 0)</string>
    <string name="label_xp4_simple_lighting">Activating front and rear train lighting</string>
    <string name="label_xp4_simple_lighting_desc">Function numbers entered in these CVs must be set using Function Mapping so that they do not activate any other outputs. Care must also be taken to ensure that the taillight outputs used are not switched on or off via function mapping by other function keys. For example, function mapping CVs of function keys used must be set to zero. In order for the light to switch off properly, both CVs 107 and 108 must always be programmed as desired. If CVs 107 or 108 are programmed with a value of 0, the function is considered deactivated.</string>
    <string name="label_xp4_simple_swoff">Switching function outputs off depending on direction of travel</string>
    <string name="label_xp4_simple_swoff_desc">It is possible to specify which function output in A1 - A7 should be switched off. If such an output is switched on via a function key, it is automatically switched off in the desired direction of travel.</string>
    <string name="label_xp4_cv113">Forward (CV 113)</string>
    <string name="label_xp4_cv114">Reverse (CV 114)</string>
    <string name="label_xp4_cv107">CV107 for red lighting on the front</string>
    <string name="label_xp4_cv108">CV108 for red lighting on the rear</string>
    <string name="label_xp5_coupling">Control of a digital coupling (A4 and A5)</string>
    <string name="label_xp5_coupling_cv47">Digital couplers can only be connected to decoder outputs A4 and A5. If a shunting tango is also to be used, outputs A4 must be used for the front coupler and A5 for the rear coupler. Which of the two function outputs A4 and A5 should be activated for a digital coupler is set in CV47. If the front and rear digital couplers are accidentally connected to the wrong outputs — i.e., A4 to the rear and A5 to the front — this can be corrected using swap outputs.</string>
    <string name="label_xp5_coupling_desc">
        Digital couplers are made of the finest copper wire windings and are used for automatically coupling and uncoupling cars. These are generally sensitive to continuous current flow, as they become relatively hot as a result. With appropriate settings, the decoder can ensure that the function outputs are automatically deactivated after a set time (CV130). Automatically switch off without having to deactivate the function key.
        \nFurthermore, the decoder can ensure that the coupler is only controlled with a high PWM for a brief moment of activation to safely raise the coupler. After this moment, less energy is required to keep the coupler raised. This lower PWM can be set in CV 135.
    </string>
    <string name="label_xp5_cv130">CV130 -> Switch-on time</string>
    <string name="label_xp5_cv135">CV135 -> Hold PWM</string>
    <string name="label_xp5_tango">Shunting tango with automatic coupling and uncoupling</string>
    <string name="label_xp5_tango_desc">
        A shunting tango can only be activated if the electrical coupling control is activated via CV47.
        \nA shunting tango is triggered by one of the coupling outputs when the decoder speed step = 0:
        \n\nHow a shunting tango works during the uncoupling process: If the car is coupled to the rear coupling, for example, the locomotive must be facing forward in the direction of travel.
        \n1. Locomotive travels at an adjustable speed for an adjustable time T1 against the current direction of travel (press, coupling released)
        \n2. Locomotive stops and changes direction
        \n3. Uncoupling process and the locomotive runs at the same speed level for an adjustable time T2 (moving away)
        \n4. The locomotive stops and now the locomotive has returned to its original direction of travel.
        \n\nHow a shunting tango works during the coupling process:
        \nIf, for example, the car is to be coupled to the rear coupling, the locomotive must be facing backwards in the direction of travel.
        \n1. Locomotive travels at an adjustable speed for an adjustable time T1 against the current direction of travel (coupling safely released)
        \n2. Locomotive stops and changes direction
        \n3. Lift the bar and the locomotive will run at the same speed for an adjustable time T2 for coupling
        \n4. The locomotive stops and now the locomotive has returned to its original direction of travel.
    </string>
    <string name="label_xp5_cv131">CV131 for the speed level of the shunting tango</string>
    <string name="label_xp5_cv131_note">The value 0 specifies that no shunting tango takes place</string>
    <string name="label_xp5_cv132">CV132 for the pressing time T1</string>
    <string name="label_xp5_cv133">CV133 for the pressing time T2 when coupling</string>
    <string name="label_xp5_cv134">CV134 for the separation time T2 when uncoupling</string>
    <string name="label_xp5_tango_note">The total duration of the coupling control may need to be adjusted via CV 130 to the times of the shunting tango in CVs 131 to 134.</string>
</resources>