<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/power_switch_item"
        android:title="@string/menu_power"
        app:actionLayout="@layout/switch_power"
        app:showAsAction="always" />

    <item
        android:id="@+id/join_switch_item"
        android:title="@string/menu_join"
        app:actionLayout="@layout/switch_join"
        app:showAsAction="always" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_locomotives"
            android:title="@string/menu_locomotives" />
        <item
            android:id="@+id/nav_dual_cab"
            android:title="@string/menu_dual_cab" />
        <item
            android:id="@+id/nav_accessories"
            android:title="@string/menu_accessories" />
        <item
            android:id="@+id/nav_routes"
            android:title="@string/menu_routes" />
    </group>

    <item
        android:id="@+id/nav_programming"
        android:title="@string/menu_programming" />
    <item
        android:id="@+id/nav_console"
        android:title="@string/menu_console" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/nav_disconnect"
        android:title="@string/menu_disconnect" />

</menu>