<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/title_pref_general">

        <SwitchPreferenceCompat
            app:title="@string/label_keep_screen"
            app:summaryOff="@string/label_keep_screen_off"
            app:summaryOn="@string/label_keep_screen_on"
            app:key="screen" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_pref_lists">

        <ListPreference
            app:title="@string/label_sort_locos"
            app:defaultValue="unsorted"
            app:entries="@array/sort_loco_entries"
            app:entryValues="@array/sort_loco_values"
            app:key="sort_locos"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:title="@string/label_sort_acc"
            app:defaultValue="unsorted"
            app:entries="@array/sort_acc_entries"
            app:entryValues="@array/sort_acc_values"
            app:key="sort_accessories"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:title="@string/label_sort_routes"
            app:defaultValue="unsorted"
            app:entries="@array/sort_route_entries"
            app:entryValues="@array/sort_route_values"
            app:key="sort_routes"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_pref_cs">

        <ListPreference
            app:title="@string/label_speed_steps"
            app:defaultValue="128"
            app:entries="@array/speed_steps_entries"
            app:entryValues="@array/speed_steps_values"
            app:key="speed"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="connect"
            app:title="@string/label_connect_at_start" />

    </PreferenceCategory>

</PreferenceScreen>