<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_stop"
        android:title="@string/action_stop"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit_loco"
        android:title="@string/action_edit_loco"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pom_value"
        android:title="@string/action_pom_value"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pom_bit"
        android:title="@string/action_pom_bit"
        android:visible="true"
        app:showAsAction="never" />
</menu>