<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2025. Aleksandr.ru
  ~ @link http://aleksandr.ru
  ~
  ~ If you're using this code, please keep above information.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/text_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_xp4_firebox"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp4_firebox_desc"/>

        <ru.aleksandr.dccppthrottle.view.ByteChipsView
            android:id="@+id/byteChipsCv181"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            app:stringArray="@array/xp4_outputs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp4_cv182"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp4_cv182lo"/>
        <ru.aleksandr.dccppthrottle.view.PlusMinusView
            style="@style/Widget.Theme.DCCppThrottle.PlusMinusView"
            android:id="@+id/plusminusCv182lo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"
            app:max="15"
            app:min="0"
            app:nullable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp4_cv182hi"/>
        <ru.aleksandr.dccppthrottle.view.PlusMinusView
            style="@style/Widget.Theme.DCCppThrottle.PlusMinusView"
            android:id="@+id/plusminusCv182hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"
            app:max="7"
            app:min="1"
            app:nullable="false" />
        <TextView
            android:id="@+id/textCv182"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_gravity="center"
            android:text="@string/label_resulting_cv_x"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp4_cv182note"/>
    </LinearLayout>
</ScrollView>