<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2025. Aleksandr.ru
  ~ @link http://aleksandr.ru
  ~
  ~ If you're using this code, please keep above information.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/text_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_xp5_coupling"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp5_coupling_cv47"/>

        <ru.aleksandr.dccppthrottle.view.ByteSwitchView
            android:id="@+id/byteCv47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_gravity="center_horizontal"
            app:stringArray="@array/xp5_cv47_bits"
            app:hiddenBits="227"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp5_coupling_desc"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp5_cv130"/>
        <ru.aleksandr.dccppthrottle.view.PlusMinusView
            style="@style/Widget.Theme.DCCppThrottle.PlusMinusView"
            android:id="@+id/plusminusCv130"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"
            app:max="255"
            app:min="0"
            app:nullable="false" />
        <TextView
            android:id="@+id/textCv130"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_gravity="center"
            android:text="time in 100ms steps"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp5_cv135"/>
        <ru.aleksandr.dccppthrottle.view.PlusMinusView
            style="@style/Widget.Theme.DCCppThrottle.PlusMinusView"
            android:id="@+id/plusminusCv135"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"
            app:max="255"
            app:min="0"
            app:nullable="false" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp5_tango"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp5_tango_desc"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp5_cv131"/>
        <ru.aleksandr.dccppthrottle.view.PlusMinusView
            style="@style/Widget.Theme.DCCppThrottle.PlusMinusView"
            android:id="@+id/plusminusCv131"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"
            app:max="255"
            app:min="0"
            app:nullable="false" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_gravity="center"
            android:text="@string/label_xp5_cv131_note"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp5_cv132"/>
        <ru.aleksandr.dccppthrottle.view.PlusMinusView
            style="@style/Widget.Theme.DCCppThrottle.PlusMinusView"
            android:id="@+id/plusminusCv132"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"
            app:max="255"
            app:min="0"
            app:nullable="false" />
        <TextView
            android:id="@+id/textCv132"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_gravity="center"
            android:text="in 100ms increments "/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp5_cv133"/>
        <ru.aleksandr.dccppthrottle.view.PlusMinusView
            style="@style/Widget.Theme.DCCppThrottle.PlusMinusView"
            android:id="@+id/plusminusCv133"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"
            app:max="255"
            app:min="0"
            app:nullable="false" />
        <TextView
            android:id="@+id/textCv133"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_gravity="center"
            android:text="in 100ms increments "/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp5_cv134"/>
        <ru.aleksandr.dccppthrottle.view.PlusMinusView
            style="@style/Widget.Theme.DCCppThrottle.PlusMinusView"
            android:id="@+id/plusminusCv134"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_margin"
            app:max="255"
            app:min="0"
            app:nullable="false" />
        <TextView
            android:id="@+id/textCv134"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_gravity="center"
            android:text="in 100ms increments "/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:text="@string/label_xp5_tango_note" />
    </LinearLayout>
</ScrollView>